Project

General

Profile

Actions

Bug #16350

closed

Object map/fast-diff invalidated if journal replays the same snap remove event

Added by Jason Dillaman almost 8 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When fast-diff is enabled, object-map needs to merge the current object map with the next object map to track the dirty objects. If the snapshot object map to be removed doesn't exist (and the snapshot doesn't exist), assume you raced with another snap remove and don't invalidate the object map/fast-diff.

2016-06-16 13:57:58.308630 7f3ecf7fe700 10 librbd::Request: 0x7f3eb88f4ff0 handle_op_event_safe: r=0
2016-06-16 13:57:58.308634 7f3ecf7fe700  5 librbd::SnapshotRemoveRequest: 0x7f3eb88f4ff0 send_remove_object_map
2016-06-16 13:57:58.308641 7f3ecf7fe700  5 librbd::object_map::SnapshotRemoveRequest: 0x7f3ecaf314b0 send_load_map: snap_oid=rbd_object_map.11052ae8944a.000000000000000d
2016-06-16 13:57:58.309327 7f3ecffff700  5 librbd::object_map::SnapshotRemoveRequest: 0x7f3ecaf314b0 should_complete: state=LOAD_MAP, r=-2
2016-06-16 13:57:58.309330 7f3ecffff700  5 librbd::object_map::SnapshotRemoveRequest: 0x7f3ecaf314b0 send_invalidate_next_map
2016-06-16 13:57:58.309332 7f3ecffff700 -1 librbd::object_map::InvalidateRequest: 0x7f3eb80135e0 invalidating object map in-memory
2016-06-16 13:57:58.309338 7f3ecffff700 -1 librbd::object_map::InvalidateRequest: 0x7f3eb80135e0 invalidating object map on-disk
2016-06-16 13:58:02.453507 7f3ecffff700 -1 librbd::object_map::InvalidateRequest: 0x7f3eb80135e0 should_complete: r=0
2016-06-16 13:58:02.453512 7f3ecffff700  5 librbd::object_map::SnapshotRemoveRequest: 0x7f3ecaf314b0 should_complete: state=INVALIDATE_NEXT_MAP, r=0
2016-06-16 13:58:02.453530 7f3ecffff700  5 librbd::object_map::SnapshotRemoveRequest: 0x7f3ecaf314b0 send_remove_map: oid=rbd_object_map.11052ae8944a.000000000000000d
2016-06-16 13:58:02.454242 7f3ecffff700  5 librbd::object_map::SnapshotRemoveRequest: 0x7f3ecaf314b0 should_complete: state=REMOVE_MAP, r=-2
2016-06-16 13:58:02.454250 7f3ecffff700  5 librbd::SnapshotRemoveRequest: 0x7f3eb88f4ff0 should_complete: state=0, r=0
2016-06-16 13:58:02.454252 7f3ecffff700 -1 librbd::SnapshotRemoveRequest: failed to retrieve parent spec
2016-06-16 13:58:02.454301 7f3ecf7fe700  5 librbd::SnapshotRemoveRequest: 0x7f3eb88f4ff0 should_complete: state=4, r=-2

Related issues 1 (0 open1 closed)

Copied to rbd - Backport #16486: jewel: Object map/fast-diff invalidated if journal replays the same snap remove eventResolvedLoïc DacharyActions
Actions #1

Updated by Jason Dillaman almost 8 years ago

  • Backport set to jewel
Actions #2

Updated by Jason Dillaman almost 8 years ago

  • Status changed from New to In Progress
  • Assignee set to Jason Dillaman
Actions #3

Updated by Jason Dillaman almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #4

Updated by Mykola Golub almost 8 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Loïc Dachary almost 8 years ago

  • Copied to Backport #16486: jewel: Object map/fast-diff invalidated if journal replays the same snap remove event added
Actions #6

Updated by Loïc Dachary over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF