librbd: ignore missing object map during snap remove

Fixes: http://tracker.ceph.com/issues/16350
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit 68b296b0f107db39b16fa90c186fdc920d97170d)